--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <h1>Welcome to the Admin Panel</h1>
     <div>
         <button onclick="createStore()">Create Store</button>
-        <form method="get" action="/store-details">
+        <form method="get" action="/api/store-details">
             <input type="submit" value="Store Details">
         </form>
         <button onclick="getAllOrders()">Get All Orders</button>
