--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <script>
+        
         // Function to handle the "Create Store" button click
         function createStore() {
             // Redirect to the "create store" page
@@ -39,13 +40,13 @@
         // Function to handle the "Get All Store Details" button click
         function getAllStores() {
             // Redirect to the "get all stores" page
-            window.location.href = "get_all_stores.html";
+            window.location.href = "/allStores";
         }
 
         // Function to handle the "Get All Orders" button click
         function getAllOrders() {
             // Redirect to the "get all orders" page
-            window.location.href = "get_all_orders.html";
+            window.location.href = "/allOrders";
         }
         function placeOrder() {
             // Redirect to the "placeOrder" page
