--- a/public/setSettings.html
+++ b/public/setSettings.html
@@ -11,29 +11,11 @@
         <label for="token">token:</label>
         <input type="text" name="token" id="token" required><br>
 
-        <label for="storeName">storeName:</label>
-        <input type="text" name="storeName" id="storeName" required><br>
+        <label for="parameter">parameter:</label>
+        <input type="text" name="parameter" id="parameter" required><br>
 
-        <label for="password">password:</label>
-        <input type="text" name="password" id="password" required><br>
-
-        <label for="owner">owner:</label>
-        <input type="text" name="owner" id="owner" required><br>
-
-        <label for="street">street:</label>
-        <input type="text" name="street" id="street" required><br>
-
-        <label for="houseNumber">houseNumber:</label>
-        <input type="text" name="houseNumber" id="houseNumber" required><br>
-
-        <label for="zip">zip:</label>
-        <input type="text" name="zip" id="zip" required><br>
-
-        <label for="telephone">telephone:</label>
-        <input type="text" name="telephone" id="telephone" required><br>
-
-        <label for="email">email:</label>
-        <input type="text" name="email" id="email" required><br>
+        <label for="value">value:</label>
+        <input type="text" name="value" id="value" required><br>
 
         <input type="submit" value="Submit">
     </form>
