removed required tag + switched to selector

--- a/public/placeOrder.html
+++ b/public/placeOrder.html
@@ -15,7 +15,7 @@
         <input type="text" name="timestamp" id="timestamp" required><br>
 
         <label for="employeeName">employeeName:</label>
-        <input type="text" name="employeeName" id="employeeName" required><br>
+        <input type="text" name="employeeName" id="employeeName"><br>
 
         <label for="firstName">firstName:</label>
         <input type="text" name="firstName" id="firstName" required><br>
@@ -30,13 +30,17 @@
         <input type="text" name="houseNumber" id="houseNumber" required><br>
 
         <label for="zip">zip:</label>
-        <input type="text" name="zip" id="zip" required><br>
+        <select id="zip" name="zip">
+            <option value="49808">49808</option>
+            <option value="49809">49809</option>
+            <option value="49011">49811</option>
+        </select><br>
 
         <label for="packageSize">package Size:</label>
         <input type="text" name="packageSize" id="packageSize" required><br>
 
         <label for="handlingInfo">handlingInfo:</label>
-        <input type="text" name="handlingInfo" id="handlingInfo" required><br>
+        <input type="text" name="handlingInfo" id="handlingInfo"><br>
 
         <label for="deliveryDate">deliveryDate:</label>
         <input type="date" name="deliveryDate" id="deliveryDate" required><br>
