--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,17 @@
         <form method="get" action="/admin/login">
             <input type="submit" value="Login">
         </form>
-        <form method="get" action="/admin/getSettings">
+        <form method="get" action="/api/settings">
             <input type="submit" value="getSettings">
         </form>
         <form method="get" action="/admin/setSettings">
             <input type="submit" value="setSettings">
         </form>
-        <form method="get" action="/admin/allOrders">
-            <input type="submit" value="allOrders">
+        <form method="get" action="/admin/tokenData">
+            <input type="submit" value="tokenData">
+        </form>
+        <form method="get" action="/admin/setAddress">
+            <input type="submit" value="setAddress">
         </form>
     </div>
 
