--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Admin Panel</title>
+    <title>LingenLiefert Admin Panel</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
 </head>
+<style>
+    body {
+        background-color: #ffffff;
+    }
+</style>
 <body>
-    <h1>Welcome to the Admin Panel</h1>
-    <div>
-        <button onclick="createStore()">Create Store</button>
-        <form method="get" action="/api/store-details">
-            <input type="submit" value="Store Details">
-        </form>
-        <button onclick="getAllOrders()">Get All Orders</button>
-        <button onclick="placeOrder()">Place Order</button>
-        <form><!--/auth/generateRegisterCode-->
-            <input type="submit" value="Generate Register Code">
-        </form>
-        <form method="get" action="/admin/login">
-            <input type="submit" value="Login">
-        </form>
-        <form method="get" action="/api/settings">
-            <input type="submit" value="getSettings">
-        </form>
-        <form method="get" action="/admin/setSettings">
-            <input type="submit" value="setSettings">
-        </form>
-        <form method="get" action="/admin/tokenData">
-            <input type="submit" value="tokenData">
-        </form>
-        <form method="get" action="/admin/setAddress">
-            <input type="submit" value="setAddress">
-        </form>
+    <div class="container text-center">
+        <table class="mx-auto">
+            <tr>
+                <td><img src="http://131.173.65.77:8080/Images/LingenLiefert-Logo.jpg" alt="LingenLiefert Logo" class="img-fluid"></td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-primary mt-3" onclick="createStore()">Create Store</button></td>
+            </tr>
+        </table>
     </div>
-
     <script>
-        
-        // Function to handle the "Create Store" button click
+        /**
+         * Function to go to the "create store" page
+         */
         function createStore() {
-            // Redirect to the "create store" page
             window.location.href = "/createStore";
         }
-
-        // Function to handle the "Get All Store Details" button click
-        function getAllStores() {
-            // Redirect to the "get all stores" page
-            window.location.href = "/allStores";
-        }
-
-        // Function to handle the "Get All Orders" button click
-        function getAllOrders() {
-            // Redirect to the "get all orders" page
-            window.location.href = "/allOrders";
-        }
-        function placeOrder() {
-            // Redirect to the "placeOrder" page
-            window.location.href = "/placeOrder";
-        }
     </script>
+
+    <!-- Include Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
