--- a/public/createStore.html
+++ b/public/createStore.html
@@ -1,95 +1,238 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Store Information and Logo Upload</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>LingenLiefert | Create a Store</title>
     <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+    />
     <style>
-        body {
-            background-color: #ffffff;
-        }
+      body {
+        background-color: #ffffff;
+      }
 
-        .container {
-            text-align: center;
-            margin-top: 20px;
-        }
+      .container {
+        text-align: center;
+        margin-top: 20px;
+      }
 
-        h1 {
-            font-size: 24px;
-        }
+      h1 {
+        font-size: 24px;
+      }
 
-        .form-container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
+      .form-container {
+        max-width: 400px;
+        margin: 0 auto;
+      }
 
-        .preview-container {
-            max-width: 200px;
-            max-height: 200px;
-            margin-top: 10px;
-        }
+      .preview-container {
+        max-width: 200px;
+        max-height: 200px;
+        margin-top: 10px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <img src="http://131.173.65.77:8080/Images/LingenLiefert-Logo.jpg" alt="LingenLiefert Logo" class="img-fluid">
-        <h1>Store Information and Logo Upload</h1>
-        <div class="form-container">
-            <form id="storeForm">
+      <img
+        src="http://131.173.65.77:8080/Images/LingenLiefert-Logo.jpg"
+        alt="LingenLiefert Logo"
+        class="img-fluid"
+      />
+      <h1>LingenLiefert | Create a Store</h1>
+      <div class="form-container">
+        <form id="storeForm">
+          <label for="storeName">Store Name:</label>
+          <input
+            type="text"
+            name="storeName"
+            id="storeName"
+            class="form-control"
+            required
+          />
 
-                <label for="storeName">Store Name:</label>
-                <input type="text" name="storeName" id="storeName" class="form-control" required>
+          <label for="username">Username:</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            class="form-control"
+            required
+          />
 
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username" class="form-control" required>
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="form-control"
+            required
+          />
 
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" class="form-control" required>
+          <label for="owner">Owner:</label>
+          <input
+            type="text"
+            name="owner"
+            id="owner"
+            class="form-control"
+            required
+          />
 
-                <label for="owner">Owner:</label>
-                <input type="text" name="owner" id="owner" class="form-control" required>
+          <label for="street">Street:</label>
+          <input
+            type="text"
+            name="street"
+            id="street"
+            class="form-control"
+            required
+          />
 
-                <label for="street">Street:</label>
-                <input type="text" name="street" id="street" class="form-control" required>
+          <label for="houseNumber">House Number:</label>
+          <input
+            type="text"
+            name="houseNumber"
+            id="houseNumber"
+            class="form-control"
+            required
+          />
 
-                <label for="houseNumber">House Number:</label>
-                <input type="text" name="houseNumber" id="houseNumber" class="form-control" required>
+          <label for="zip">ZIP:</label>
+          <select name="zip" id="zip" class="form-control" required>
+            <option value="49808">49808</option>
+            <option value="49809">49809</option>
+            <option value="49811">49811</option>
+          </select>
 
-                <label for="zip">ZIP:</label>
-                <select name="zip" id="zip" class="form-control" required>
-                    <option value="49808">49808</option>
-                    <option value="49809">49809</option>
-                    <option value="49811">49811</option>
-                </select>
+          <label for="telephone">Telephone:</label>
+          <input
+            type="tel"
+            name="telephone"
+            id="telephone"
+            class="form-control"
+            required
+          />
 
-                <label for="telephone">Telephone:</label>
-                <input type="tel" name="telephone" id="telephone" class="form-control" required>
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            required
+          />
 
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" class="form-control" required>
-
-                <label for="logoInput">Logo:</label>
-                <input type="file" id="logoInput" class="form-control" accept="image/*">
-                <!-- <div class="preview-container">
+          <label for="logoInput">Logo:</label>
+          <input
+            type="file"
+            id="logoInput"
+            class="form-control"
+            accept="image/*"
+          />
+          <!-- <div class="preview-container">
                     <img id="previewLogo" src="#" alt="Preview">
                 </div> -->
 
-                <label for="backgroundImage">BackgroundImage:</label>
-                <input type="file" id="backgroundImage" class="form-control" accept="image/*">
+          <label for="backgroundImage">BackgroundImage:</label>
+          <input
+            type="file"
+            id="backgroundImage"
+            class="form-control"
+            accept="image/*"
+          />
 
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
-            </form>
+          <button type="submit" class="btn btn-primary mt-3 btn-lg">Submit</button>
+        </form>
 
-            <div id="message" class="mt-3"></div>
-        </div>
+        <div id="message" class="mt-3"></div>
+      </div>
     </div>
 
     <script>
-        // Your JavaScript code remains the same as in the original code.
+      document
+        .getElementById("storeForm")
+        .addEventListener("submit", async (event) => {
+          event.preventDefault();
+
+          const storeName = document.getElementById("storeName").value;
+          const username = document.getElementById("username").value;
+          const password = document.getElementById("password").value;
+          const owner = document.getElementById("owner").value;
+          const street = document.getElementById("street").value;
+          const houseNumber = document.getElementById("houseNumber").value;
+          const zip = document.getElementById("zip").value;
+          const telephone = document.getElementById("telephone").value;
+          const email = document.getElementById("email").value;
+          const imageInput = document.getElementById("logoInput");
+          const backgroundImageInput =
+            document.getElementById("backgroundImage");
+          const messageDiv = document.getElementById("message");
+
+          const selectedFile = imageInput.files[0];
+          const backgroundImageFile = backgroundImageInput.files[0];
+
+          if (!selectedFile) {
+            messageDiv.textContent = "Please select a logo image.";
+            return;
+          }
+
+          const reader = new FileReader();
+          reader.onload = async (event) => {
+            const imageData = event.target.result.split(",")[1];
+
+            const backgroundReader = new FileReader();
+            backgroundReader.onload = async (backgroundEvent) => {
+              const backgroundImageData =
+                backgroundEvent.target.result.split(",")[1];
+
+              try {
+                const response = await fetch("/auth/register", {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({
+                    storeName: storeName,
+                    username: username,
+                    password: password,
+                    owner: owner,
+                    street: street,
+                    houseNumber: houseNumber,
+                    zip: zip,
+                    telephone: telephone,
+                    email: email,
+                    logo: imageData,
+                    backgroundImage: backgroundImageData,
+                  }),
+                });
+
+                const data = await response.json();
+                if (response.ok) {
+                  messageDiv.textContent = `Image uploaded successfully. File name: ${data.filename}`;
+                } else {
+                  messageDiv.textContent = `Error: ${data.message}`;
+                }
+              } catch (error) {
+                messageDiv.textContent = `An error occurred: ${error.message}`;
+              }
+            };
+            backgroundReader.readAsDataURL(backgroundImageFile);
+          };
+          reader.readAsDataURL(selectedFile);
+        });
+
+      // Preview the logo image
+      document
+        .getElementById("logoInput")
+        .addEventListener("change", (event) => {
+          const preview = document.getElementById("previewLogo");
+          preview.style.display = "block";
+          preview.src = URL.createObjectURL(event.target.files[0]);
+        });
     </script>
 
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
