--- a/public/login.html
+++ b/public/login.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Admin Panel</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #ffffff;
+        }
+
+        .container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        h2 {
+            font-size: 24px;
+        }
+
+        .form-group {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        .btn-primary {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div style="text-align: center;">
-        <h2>Login</h2>
-        <form method="post" action="/auth/login">
+    <table class="container">
+        <tr>
+            <td>
+                <img src="http://131.173.65.77:8080/Images/LingenLiefert-Logo.jpg" alt="LingenLiefert Logo" class="img-fluid">
+                <h1>LingenLiefert | Login</h1>
+                <form method="post" action="/auth/login">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" name="username" id="username" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" name="password" id="password" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                </form>
+            </td>
+        </tr>
+    </table>
 
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required><br>
-
-        <label for="password">Password:</label>
-        <input type="text" name="password" id="password" required><br>
-
-        <input type="submit" value="Submit">
-    </form>
-    </div>
+    <!-- Include Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
