--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
          * Function to go to the "store details" page
          */
         function storeDetails(){
-            window.location.href = "/api/store-details";
+            window.location.href = "/storeDetails";
         }
     </script>
 
